--- a/style.css
+++ b/style.css
@@ -1,57 +1,246 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root {
+  --primary-color: #385F96;
+  --text-color: #4E4E4E;
+}
+
 
 .poppins-regular {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .poppins-semibold {
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-  }
-  
-  .poppins-bold {
-    font-family: "Poppins", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .poppins-extrabold {
-    font-family: "Poppins", sans-serif;
-    font-weight: 800;
-    font-style: normal;
-  }
-.container{
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.poppins-bold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.poppins-extrabold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.container {
   max-width: 1250px;
-  margin:0 auto;
+  margin: 0 auto;
 }
-.header{
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
+
+.header {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.logo{
-    color:#385F96;
-    font-size:30px;
+
+.logo {
+  color: #385F96;
+  font-size: 30px;
 }
-ul li{
- list-style:none; 
- display:inline-flex;
+
+ul li {
+  list-style: none;
+  display: inline-flex;
 }
 
 
-ul li a{
-  text-decoration:none;
-  font-size:20px;
-  margin-right:10px;
+ul li a {
+  text-decoration: none;
+  font-size: 20px;
+  margin-right: 30px;
+  color: var(--primary-color);
+  font-weight: 500;
 }
-.btn-primary{
-   color:white;
-   border-radius:50px;
-   background-color:#385F96;
-   border:none; 
-   padding:15px 40px;
-   cursor:pointer;
+
+.btn-primary {
+  color: white;
+  border-radius: 50px;
+  background-color: #385F96;
+  font-weight: 600;
+  border: none;
+  padding: 15px 40px;
+  cursor: pointer;
+  color: regular;
+  display: flex;
+  display: inline;
+}
+
+.banner {
+  margin-top: 40px;
+  display: flex;
+  justify-items: center;
+}
+
+.left-banner {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.left-side {
+  padding-left: 20px;
+}
+
+.left-image {
+  position: absolute;
+  top: -1vh;
+  left: -5.8vh;
+  z-index: -1;
+}
+
+.banner-title {
+  font-size: 40px;
+  margin-bottom: 20px;
+  color: var(--primary-color);
+}
+
+.banner-paragraph {
+  color: var(--text-color);
+  width: 60%;
+  padding-bottom: 20px;
+}
+
+/* Content Section */
+.content {
+  margin-top: 100px;
+  display: flex;
+  gap: 50px;
+}
+
+.content-img {
+  width: 50%;
+}
+
+.content-container {
+  width: 50%;
+}
+
+.content-paragraph {
+  color: var(--text-color);
+  padding-bottom: 20px;
+}
+
+.border{
+  height: 8px;
+  width: 100px;
+  background-color: #44D1D9;
+  border-radius: 50px;
+}
+/* Project Section: */
+
+.project-section{
+  margin-top: 100px;
+  background: url(./images/Rectangle\ 10.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+
+}
+
+.project{
+  display: flex;
+  gap: 50px;
+}
+.left-p, .project-image{
+  padding:50px 0;
+}
+.left-p{
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+
+/* Footer */
+footer{
+  background: #385F96;
+}
+.footer-content{
+    color: white;
+    text-align: center;
+    padding: 14px 0;
+    font-size: 18px;
+}
+.heart{
+  color: red;
+}
+
+@media screen and (max-width:600px) {
+  img{
+    height: 300px;
+    width: fit-content;
+  }
+  .logo h2{
+    font-size: 25px;
+  }
+  .btn-primary{
+    padding: 10px 30px;
+  }
+  .header,.banner,.content,.project {
+    margin: 0 20px;
+  }
+  .header,.banner,.content{
+    margin-top: 20px;
+    margin-bottom: 50px;
+  }
+  .nav-item {
+    display: none;
+  }
+
+  .banner {
+    margin-top: 100px;
+    flex-direction: column;
+    gap: 50px;
+    margin: 0 20px;
+  }
+  .banner-title{
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
+  .banner-paragraph,.content-paragraph{
+    font-size: 15px;
+  }
+  .b-img{
+    margin-bottom: 100px;
+  }
+
+  .left-image {
+    position: absolute;
+    top: -12%;
+    left: -3.5%;
+  }
+
+  .img-banner {
+    height: 100px;
+    height: 90px;
+  }
+  .content{
+    flex-direction: column-reverse;
+  }
+  .banner-paragraph,.content-container {
+  width: 100%;
+}
+.project{
+  flex-direction: column;
+  gap:0px;
+}
+.footer-content{
+    font-size: 15px;
+}
+.project-image img{
+  max-width: 350px;
+}
 }
